0.3:
0.2.1
  - Fix delay not working as expected
0.2:
  - Add a interprocess lock
0.1:
  - Add travis yaml file
  - Initial commit/import