@@ -1,4 +1,5 @@
 0.3:
+  - Renamed from 'shared_lock' to 'fasteners'
 0.2.1
   - Fix delay not working as expected
 0.2:
